crates/cli/tests/snapshots/repeated_keys__fix_5f74b9c0838470bfeb2d1edd861f0ac92ed154c3492fae9074bad9db7def015e.snap
---
source: crates/cli/tests/repeated_keys.rs
expression: "\"{\\n  foo.a = 1;\\n  # keep this comment near the removed occurrence\\n  foo.b = 2;\\n  foo.c = 3;\\n}\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,9 @@
 {
-  foo.a = 1;
+  foo = {
+    a = 1;
+    b = 2;
+    c = 3;
+  };
   # keep this comment near the removed occurrence
-  foo.b = 2;
-  foo.c = 3;
 }
