crates/cli/tests/snapshots/repeated_keys__fix_9fc477ac45b5fe18b3d579a44ea41ae5f0bfeac68565c8a4c1dca088040d0b93.snap
---
source: crates/cli/tests/repeated_keys.rs
expression: "\"{\\n  \\\"foo\\\".bar1 = 1;\\n  \\\"foo\\\".bar2 = 2;\\n  \\\"foo\\\".bar3 = 3;\\n  \\\"foo\\\".bar4 = 4;\\n}\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,9 @@
 {
-  "foo".bar1 = 1;
-  "foo".bar2 = 2;
-  "foo".bar3 = 3;
-  "foo".bar4 = 4;
+  "foo" = {
+    bar1 = 1;
+    bar2 = 2;
+    bar3 = 3;
+    bar4 = 4;
+  };
 }
