crates/cli/tests/snapshots/repeated_keys__fix_cb92ec4e79cda95118761f115a90c5374a6c1dff6961a57c41cfd056472bb7a3.snap
---
source: crates/cli/tests/repeated_keys.rs
expression: "\"{\\n  \\\"foo\\\".a = 1;\\n  \\\"foo\\\".b = 2;\\n}\\n\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,5 +1,7 @@
 {
-  "foo".a = 1;
-  "foo".b = 2;
+  "foo" = {
+    a = 1;
+    b = 2;
+  };
 }
