crates/cli/tests/snapshots/repeated_keys__lint_107c49dd2c0b84878c81852acfd4aee37038d8367b6bc7f5b43ce051c24908e5.snap
---
source: crates/cli/tests/repeated_keys.rs
expression: "\"{\\n  foo.bar = 1;\\n  foo.bar.\\\"hello\\\" = 1;\\n  foo.again = 1;\\n}\\n\""
---
[20] Warning: Avoid repeated keys in attribute sets
   ╭─[<temp_file_path>:2:3]
   │
 2 │ ╭─▶   foo.bar = 1;
   · │     ───┬───  
   · │        ╰───── The key foo is first assigned here ...
 3 │ │     foo.bar."hello" = 1;
   · │     ───────┬───────  
   · │            ╰───────── ... repeated here ...
 4 │ ├─▶   foo.again = 1;
   · │                      
   · ╰────────────────────── ... and here. Try foo = { bar=...; bar."hello"=...; again=...; } instead.
───╯
