crates/cli/tests/snapshots/repeated_keys__lint_5f74b9c0838470bfeb2d1edd861f0ac92ed154c3492fae9074bad9db7def015e.snap
---
source: crates/cli/tests/repeated_keys.rs
expression: "\"{\\n  foo.a = 1;\\n  # keep this comment near the removed occurrence\\n  foo.b = 2;\\n  foo.c = 3;\\n}\\n\""
---
[20] Warning: Avoid repeated keys in attribute sets
   ╭─[<temp_file_path>:2:3]
   │
 2 │         foo.a = 1;
   │         ──┬──┬────  
   │           ╰───────── The key foo is first assigned here ...
   │              │      
   │              ╰────── ... and here. Try foo = { a=...; b=...; c=...; } instead.
 3 │ ╭───▶   # keep this comment near the removed occurrence
 4 │ ├───▶   foo.b = 2;
   │ │       ──┬──     │  
   │ │         ╰────────── ... repeated here ...
   │ │                 │  
   │ ╰──────────────────── ... and here. Try foo = { a=...; b=...; c=...; } instead.
   │                   │  
   │   ╭───────────────╯  
 5 │   ├─▶   foo.c = 3;
   │   │                  
   │   ╰────────────────── ... and here. Try foo = { a=...; b=...; c=...; } instead.
───╯
