crates/cli/tests/snapshots/repeated_keys__lint_653aae0c9fb8b448e30e62c7daa38519eded4ba2078838f788b3e769db564123.snap
---
source: crates/cli/tests/repeated_keys.rs
expression: "\"{\\n  foo.baz.bar1 = 1;\\n  foo.baz.bar2 = 2;\\n  foo.baz.bar3 = 3;\\n  foo.baz.bar4 = 4;\\n  foo.baz.bar5 = 5;\\n}\\n\""
---
[20] Warning: Avoid repeated keys in attribute sets
   ╭─[<temp_file_path>:2:3]
   │
 2 │ ╭─▶   foo.baz.bar1 = 1;
   · │     ──────┬─────  
   · │           ╰─────── The key foo is first assigned here ...
 3 │ │     foo.baz.bar2 = 2;
   · │     ──────┬─────  
   · │           ╰─────── ... repeated here ...
   ⋮ ⋮   
 6 │ ├─▶   foo.baz.bar5 = 5;
   · │                         
   · ╰───────────────────────── ... and here (2 occurrences omitted). Try foo = { baz.bar1=...; baz.bar2=...; baz.bar3=...; } instead.
───╯
