crates/cli/tests/snapshots/repeated_keys__lint_7928b443d258628d0f648fe2e30278f84cbe97274683df67fd436584732d7b2c.snap
---
source: crates/cli/tests/repeated_keys.rs
expression: "\"rec {\\n  foo.x = foo.y;\\n  foo.y = 2;\\n  foo.z = 3;\\n}\\n\""
---

